Reopening FreeBSD's compat devices was broken due to a missing flag clear. Patch part of #7040. Thanks.